--- a/src/main/resources/templates/matching/matchingList.html
+++ b/src/main/resources/templates/matching/matchingList.html
@@ -18,7 +18,7 @@
         var boardtype=getParameterByName("boardtype");
         
         function InsertMatchingBoard() {
-            //location.href = "/board/boardInsert?boardtype=" +boardtype;
+            location.href = "/matching/matchingInsert?boardtype=" +boardtype;
         }
     </script>
 
@@ -61,6 +61,7 @@
         <tr>
             <th>게시글번호</th>
             <th>제목</th>
+            <th>금액</th>
             <th>작성자</th>
             <th>등록일</th>
             <th>해결여부</th>
@@ -71,6 +72,7 @@
         <tr th:each="matching :${matchingList}">
             <td th:text="${matching.getBno()}"></td>
             <td> <a th:href="@{'/matching/matchingView/'+${matching.getBno()}}" th:text="${matching.getTitle()}"></a></td>
+            <td th:text="${matching.getMoney()}"></td>
             <td th:text="${matching.getRequest_nickname()}"></td>
             <td th:text="${matching.getRegister_date()}"></td>
             <td th:if="${matching.getStudentForeignkey_accept()} == null">NO</td>
