--- a/src/main/resources/templates/search/searchAllList.html
+++ b/src/main/resources/templates/search/searchAllList.html
@@ -6,7 +6,22 @@
         var pages = getParameterByName("page");
         var boardtype=getParameterByName("boardtype");
         
-        if(pages == ""){
+    	if([[${board.getTotalElements()}]] == 0) {
+    		var tr = document.createElement("tr");
+    		var th = document.createElement("th");
+    		
+    		th.colSpan = 6;
+    		th.style.fontSize = "25px";
+    		th.innerHTML = "검색 결과가 없습니다";
+    		tr.appendChild(th);
+    		$("#tbody").append(tr);
+    	}
+
+        $("#totalSearchBox").val([[${text}]]);
+        $("#totalSearchDate").val([[${date}]]).prop("selected", true);
+        $("#totalSearchOption").val([[${option}]]).prop("selected", true);
+        
+        if(pages == "") {
             pages=0;
         }
         $("#page"+pages).attr("class","active");
@@ -27,7 +42,8 @@
             if(pageNum + nextOrPrev < 0) return false;
             else if(pageNum + nextOrPrev > [[${board.getTotalPages()}]] - 1) return false;
 
-            location.href = "/board/boardList/?boardtype=" + boardtype + "&page=" + (pageNum + nextOrPrev);
+            location.href = "/search/searchAllList?text=" + [[${text}]] + "&date=" 
+            		+ [[${date}]] + "&option=" + [[${option}]] + "&page=" + (pageNum + nextOrPrev);
             return true;
         }
         
@@ -112,7 +128,7 @@
     	<button onClick="return searchTotalBoard()">▶</button>
     </div>
     <div><h2 style="color:Blue">Board List</h2></div>
-    <div><h4 style="color:red" th:text=${boardType}></h4></div>
+    <div><h4 style="color:red">전체 게시판</h4></div>
     <br><br>
 
     <table class="table table-horizontal table-bordered" id="boardListTable">
@@ -127,7 +143,7 @@
         </tr>
         </thead>
         <tbody id="tbody">
-        <tr th:each="boardlist :${board}">
+        <tr th:each="boardlist :${board}" th:if="${boardlist.getCheck_delete()} != 'T'">
             <td th:text="${boardlist.getBno()}"></td>
             <td> <a th:href="@{'/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
             <td th:text="${boardlist.getNickname()}"></td>
@@ -139,7 +155,7 @@
     </table>
     <ul class="pagination">
         <li id="pagefirst">
-            <a th:href="'?boardtype=' + ${boardType} + '&page=0'">
+            <a th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=0'">
             <span>«</span>
             </a>
         </li>
@@ -149,7 +165,7 @@
             </a>
         </li>
         <li style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
-            <a th:href="'?boardtype=' + ${boardType} + '&page=' + ${num}" th:text="${num+1}"></a>
+            <a th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${num}" th:text="${num+1}"></a>
         </li>
         <li id="pageNext">
             <a style="cursor:pointer" th:onClick="|return pageMove('next');|">
@@ -157,10 +173,10 @@
             </a>
         </li>
         <li>
-            <a th:if="${board.getTotalPages()}>0" th:href="'?boardtype=' + ${boardType} + '&page=' + ${board.getTotalPages()-1}">
+            <a th:if="${board.getTotalPages()}>0" th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${board.getTotalPages()-1}">
                 <span>»</span>
             </a>
-            <a th:if="${board.getTotalPages()}==0" th:href="'?boardtype=' + ${boardType} + '&page=' + ${board.getTotalPages()}">
+            <a th:if="${board.getTotalPages()}==0" th:href="'?text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${board.getTotalPages()}">
                 <span>»</span>
             </a>
         </li>
@@ -188,7 +204,7 @@
     			<option value="commentContent">댓글내용</option>
     		</select>
     	</b> 
-    	<input type="text" id="searchBox" style="font-size:15px;">
+    	<input type="text" id="optionSearchBox" style="font-size:15px;">
     	<button>▶</button>
     </div>
 </th:block>
