--- a/src/main/resources/templates/search/searchAllList.html
+++ b/src/main/resources/templates/search/searchAllList.html
@@ -18,6 +18,7 @@
     	}
 
         $("#totalSearchBox").val([[${text}]]);
+        $("#totalSearchBox").focus();
         $("#totalSearchDate").val([[${date}]]).prop("selected", true);
         $("#totalSearchOption").val([[${option}]]).prop("selected", true);
         
