--- a/src/main/resources/templates/search/searchBoardList.html
+++ b/src/main/resources/templates/search/searchBoardList.html
@@ -18,6 +18,7 @@
     	}
 
         $("#searchBox").val([[${text}]]);
+        $("#searchBox").focus();
         $("#searchDate").val([[${date}]]).prop("selected", true);
         $("#searchOption").val([[${option}]]).prop("selected", true);
         
