--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1420,3 +1420,13 @@ textarea.form-control {
 	z-index:1002;
 	overflow: auto;
 }
+.chating{
+  background-color: #9d9d9d;
+  width: 500px;
+  height: 500px;
+  overflow: auto;
+}
+.chating p{
+  color: #000;
+  text-align: left;
+}
