--- a/src/main/resources/templates/matching/matchingInsert.html
+++ b/src/main/resources/templates/matching/matchingInsert.html
@@ -54,29 +54,21 @@
         </form>
 
         <div>
-            <button type="button" class="btn btn-primary waves-effect waves-light" onClick="dataSend()">등록</button>
-            <button type="button" onClick="history.back(-1);" class="btn btn-primary waves-effect waves-light">이전</button>
+            <button type="button" class="btn btn-primary waves-effect waves-light" onClick="importtest()">등록</button>
+            <button type="button" onClick="location.href='/matching/matchingList?boardtype=심부름'" class="btn btn-primary waves-effect waves-light">이전</button>
         </div>
 
     </div>
     <!-- /.card-content -->
 </th:block>
 <th:block layout:fragment="script">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
     <script type="text/javascript">
         //var boardTypeName = getParameterByName("boardtype");
         //$("#" + boardTypeName).attr("selected","selected");
-
-        function getParameterByName(name) {
-            name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-                results = regex.exec(location.search);
-            return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
-        }
-
-        function dataSend() {
+        function importtest(){
             var content=$('#content').val(CKEDITOR.instances.content.getData());
-            let queryString = $('#infoForm').serialize();
-            var boardtype = $('#boardtype').val();
             var title=$('#title');
             if(title.val() == "") {
                 alert("제목 입력");
@@ -87,6 +79,47 @@
                 alert("내용 입력");
                 return false;
             }
+            var IMP = window.IMP;
+            IMP.init('imp14540701');
+            var money = $('#money').val();
+
+            IMP.request_pay({
+                pg: 'kakao',
+                merchant_uid: 'merchant_' + new Date().getTime(),
+                name: '주문명 : 주문명 설정',
+                amount: money,
+                buyer_email: 'iamport@siot.do',
+                buyer_name: '구매자이름',
+                buyer_tel: '010-1234-5678',
+                buyer_addr: '인천광역시 부평구',
+                buyer_postcode: '123-456'
+            }, function (rsp) {
+                console.log(rsp);
+                if (rsp.success) {
+                    var msg = '결제가 완료되었습니다.';
+                    msg += '고유ID : ' + rsp.imp_uid;
+                    msg += '상점 거래ID : ' + rsp.merchant_uid;
+                    msg += '결제 금액 : ' + rsp.paid_amount;
+                    msg += '카드 승인번호 : ' + rsp.apply_num;
+                    dataSend();
+                } else {
+                    var msg = '결제에 실패하였습니다.';
+                    msg += '에러내용 : ' + rsp.error_msg;
+                }
+                alert(msg);
+            });
+        }
+        function getParameterByName(name) {
+            name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+                results = regex.exec(location.search);
+            return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+        }
+
+        function dataSend() {
+            let queryString = $('#infoForm').serialize();
+            var boardtype = $('#boardtype').val();
+
             $.ajax({
                 type: "POST",
                 url: "/matchingInsert",
