--- a/src/main/resources/templates/studentInfo/studentRegistration.html
+++ b/src/main/resources/templates/studentInfo/studentRegistration.html
@@ -14,6 +14,10 @@
        	 result:data
    	};*/
    	//alert(queryString);
+		if(!$('#CertifiedNumber').prop("readonly")){
+			alert("휴대폰 인증을해주세요");
+			return false;
+		}
     	$.ajax({
     	    type: "POST",
     	    url : "/studentInfo/studentRegistration",
@@ -42,6 +46,34 @@
     	});
    		return false;
 	}
+	$('#sendPhoneNumber').click(function(){
+		let phoneNumber = $('#phonenum').val();
+		var regPhone = /^((01[1|6|7|8|9])[1-9]+[0-9]{6,7})|(010[1-9][0-9]{7})$/;
+		if(!regPhone.test(phoneNumber)){
+			alert("휴대폰번호를 입력해주세요");
+			return false;
+		}
+		alert("인증번호 요청완료");
+
+		$.ajax({
+			type: "GET",
+			url: "/check/sendSMS",
+			data: {
+				"phoneNumber" : phoneNumber
+			},
+			success: function(res){
+				$('#checkBtn').click(function(){
+					if(res ==$('#CertifiedNumber').val()){
+						alert("인증성공");
+						$('#CertifiedNumber').attr("readonly",true);
+						$('#phonenum').attr("readonly",true);
+					}else{
+						alert("인증실패");
+					}
+				})
+			}
+		})
+	});
 </script>
  </th:block>	
 
@@ -88,12 +120,27 @@
 						<input type="text" id="email" name="email" class="form-control" placeholder="이메일 입력" required="required"/>
 					</div>
 				</div>
-				
+
+				<div>
+					<label for="writer" class="col-sm-2 control-label">휴대폰 번호</label>
+					<div class="col-sm-10">
+						<input type="number" min="0" id="phonenum" name="phonenum" class="form-control" placeholder="번호 입력" required="required"/>
+						<button type="button" id="sendPhoneNumber" class="btn btn-primary waves-effect waves-light">인증받기</button>
+					</div>
+				</div>
+
+				<div>
+					<label for="writer" class="col-sm-2 control-label">인증 번호</label>
+					<div class="col-sm-10">
+						<input type="number" min="0" id="CertifiedNumber" class="form-control" placeholder="번호 입력" required="required"/>
+						<button type="button" id="checkBtn" class="btn btn-primary waves-effect waves-light">체크</button>
+					</div>
+				</div>
 				<div>
 					<label for="writer" class="col-sm-2 control-label">성별</label>
 					<div class="col-sm-10">		
-						<input type="radio" id="genM" name="gen" value="M" required="required">남
-						<input type="radio" id="genF" name="gen" value="F" required="required">여
+						<input type="radio" id="genM" name="gen" value="M" required="required"/>남
+						<input type="radio" id="genF" name="gen" value="F" required="required"/>여
 					</div>
 				</div>
 
