--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-<<<<<<< Updated upstream
-=======
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" , initial-scale="1">
@@ -220,7 +218,6 @@
     </div>
   </footer>
   
->>>>>>> Stashed changes
 <th:block layout:fragment="script">
     <script th:inline="javascript">
         var pages = getParameterByName("page");
