--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script th:src="@{/js/bootstrap.js}"></script>
+    <script th:src="@{/scripts/jquery.min.js}"></script>
 </head>
 <body>
     <!-- 모바일 header -->
@@ -136,9 +137,9 @@
                     <div id="recommend-btn" class="recommend-btn clear">
                         <div class="btn-inner">
                             <!-- 좋아요 -->
-                            <div class="like-btn-form fl">
+                            <div class="like-btn-form fl" th:if="${userSid} != null">
                                 <span>좋아요</span>
-                                <button type="button" class="btn-like"><img src="images/pngwing.com.png" class="like-btn"></button>
+                                <button type="button" class="btn-like"><img th:src="@{/images/pngwing.com.png}" th:onClick="|return likeBoard();|" id="likeboard" class="like-btn"></button>
                             </div>
                             <!-- 신고 -->
                             <div class="declare-btn-form fl">
@@ -247,10 +248,10 @@
         $("#page"+pages).attr("class","active");
         
         if(likecheck==''||likecheck=='F'){
-            $("#likeboard").html("좋아요");
+            $("#likeboard").attr("th:src", "@{/images/pngwing.com.png}");
         }
         else{
-            $("#likeboard").html("좋아요 취소");
+            $("#likeboard").attr("th:src", "@{/images/pngwingdown.com.png}");
         }
 
         function getParameterByName(name) {
@@ -471,11 +472,12 @@
                     },
                     success: function (data) {
                         $("#likecnt").html(data);
-                        if($("#likeboard").html()=="좋아요") {
-                            $("#likeboard").html("좋아요 취소");
+
+                        if($("#likeboard").attr("th:src") == "@{/images/pngwing.com.png}") {
+                            $("#likeboard").attr("th:src", "@{/images/pngwingdown.com.png}");
                         }
                         else{
-                            $("#likeboard").html("좋아요");
+                            $("#likeboard").attr("th:src", "@{/images/pngwing.com.png}");
                         }
                     },
                     error: function () {
